--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -3,9 +3,9 @@
 <body>
 
 <!-- Navigation -->
-<div th:fragment="footer">
+<div th:fragment="footer" class="footer">
     <!-- Footer -->
-    <footer id="myFooter">
+    <footer id="myFooter" class="container-fluid w-100 py-3">
         <div class="container-fluid">
             <div class="row align-items-center">
                 <div class="col-sm myCols">
