--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -23,10 +23,11 @@
     <title>Bio Trio Cinema | Contact</title>
 </head>
 <body>
+<div class="d-flex flex-column sticky-footer-wrapper">
 <!--Insert header fragment-->
 <div th:insert="~{/fragments/header :: header}"></div>
 
-<div class="container">
+<div class="container flex-fill">
     <!--Section: Contact v.2-->
     <section class="mb-4">
 
