--- a/src/main/resources/templates/movie.html
+++ b/src/main/resources/templates/movie.html
@@ -88,17 +88,18 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-md-12">
-                <div class="form-group">
-                    <form th:action="@{'/select-seats'}" method="POST">
+        <div class="row ">
+            <div class="col-md-4"></div>
+            <div class="col-md-4">
+                <div class="form-group text-center">
+                    <form th:action="@{'/select-seats'}" method="POST" style="margin-top: 10%">
                         <label>Select Date & Time</label>
-                        <select name="movie_plan_id" class="form-control mb-4">
+                        <select name="movie_plan_id" class="form-control mb-4 select-css">
                             <option th:each="moviePlan: ${moviePlans}" th:value="${moviePlan.movie_plan_id}">
                                 <span th:text="${moviePlan.date_time}"></span>
                             </option>
                         </select>
-                        <button type="submit">Submit</button>
+                        <button type="submit" class="btn empty-button">Go to seat reservation</button>
                     </form>
                 </div>
             </div>
