--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -74,6 +74,7 @@
                         <input type="text" name="password" id="password" class="form-control">
                     </div>
                     <div class="form-group text-center">
+                        <a th:href="@{/}" class="btn btn-light">Home</a>
                         <input type="submit" name="submit" class="btn btn-light" value="Login">
                     </div>
                 </form>
