--- a/src/main/resources/templates/seats.html
+++ b/src/main/resources/templates/seats.html
@@ -30,7 +30,7 @@
 
     <div class="row" th:each="i: ${#numbers.sequence(0, moviePlan.theaterRoom.rows_no - 1)}">
         <div class="span3" th:each="j: ${#numbers.sequence(0, moviePlan.theaterRoom.columns_no - 1)}">
-            <input type="checkbox" name="${i} + ${j}"  th:disabled="${seats[__${i}__][__${j}__]}" th:value="${seats[__${i}__][__${j}__]}">
+            <input type="checkbox" th:name="${i} + '-' + ${j}"  th:disabled="${reservedSeats[__${i}__][__${j}__]}" th:field="${seats.selectedSeats}" th:value="${i} + '-' + ${j}">
             <br>
             <span th:text="'' + ${i} + '-' + ${j} + '&nbsp'"></span>
         </div>
