--- a/src/main/resources/templates/edit-user.html
+++ b/src/main/resources/templates/edit-user.html
@@ -38,8 +38,8 @@
         <!-- Role -->
         <label>Role</label>
         <select th:field="${editedUser.role}" class="form-control mb-4">
-            <option value="ROLE_ADMIN"> ADMIN </option>
-            <option value="ROLE_USER"> USER </option>
+            <option value="ROLE_MANAGER"> USER </option>
+            <option value="ROLE_EMPLOYEE"> EMPLOYEE </option>
         </select>
 
 
