Create Booking and send email

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -18,26 +18,15 @@
     <link th:href="@{/css/style.css}" href="/static/css/style.css" rel="stylesheet" type="text/css"/>
 
     <!-- Page Title -->
-    <title>Bio Trio Cinema | Booking Confirmation</title>
+    <title>Bio Trio Cinema | Home</title>
 </head>
 <body>
 <!--Insert header fragment-->
 <div th:insert="~{/fragments/header :: header}"></div>
 
-Your booking has been successfully made !
-<br>
 
-Movie: <span th:text="${booking.moviePlan.movie.type} ? ${booking.moviePlan.movie.movieDetails.name} + ' : 3D' : ${booking.moviePlan.movie.movieDetails.name} + ' : 2D'">Movie</span><br>
-Date & Time: <span th:text="${booking.moviePlan.date_time}">Date & Time</span><br>
-Theater Room: <span th:text="${booking.moviePlan.theaterRoom.name}">Theater Room</span><br>
-Seat(s):
-<ul th:each="ticket : ${booking.ticketList}">
-    <li th:text="${ticket.seat_number}"></li>
-</ul>
-Email: <span th:text="${booking.email}"></span><br>
-Phone number: <span th:text="${booking.phone_number}"></span><br>
-Total price: <span th:text="${booking.totalPrice}"></span> DKK <br>
-Confirmation code: <span th:text="${booking.confirmation_code}"></span>
+<h3 th:text="${error}"></h3>
+
 
 <!--Insert footer fragment-->
 <div th:insert="~{/fragments/footer :: footer}"></div>
